CNN model trained for CIFAR-10 dataset

--- a/HW/hw5/hw5.ipynb
+++ b/HW/hw5/hw5.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -77,14 +77,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Homework 5 -- name: Hansika Weerasena, email: hansikam.lokukat@ufl.edu, UFID: 11639514\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "NAME = 'Hansika Weerasena'\n",
     "EMAIL = 'hansikam.lokukat@ufl.edu'\n",
     "UFID = 11639514\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "print('Homework 5 -- name: {}, email: {}, UFID: {}\\n'.format(NAME, EMAIL, UFID))"
    ]
@@ -200,9 +209,9 @@
    },
    "outputs": [],
    "source": [
-    "academic_integrity_acknowledgement = False\n",
+    "academic_integrity_acknowledgement = True\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
@@ -251,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -266,7 +275,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_69903/91747469.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "/Users/hansika/Documents/MLE/env/mle/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------\n",
+      "### Python version: 3.9.6 (default, Nov 10 2023, 13:38:27) \n",
+      "[Clang 15.0.0 (clang-1500.1.0.2.5)]\n",
+      "### NumPy version: 1.26.3\n",
+      "### Scikit-learn version: 1.4.0\n",
+      "### Tensorflow version: 2.15.0\n",
+      "------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Load packages we need\n",
     "import sys\n",
@@ -333,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -385,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -474,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -522,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -537,7 +576,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "170498071/170498071 [==============================] - 3s 0us/step\n",
+      "(50000, 32, 32, 3) (5000, 32, 32, 3) (5000, 32, 32, 3) (50000, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "# do some sanity checks\n",
     "train_x, train_y, test_x, test_y, val_x, val_y, labels = load_preprocess_cifar10(onehot=False, minmax_normalize=False)\n",
@@ -646,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -669,15 +718,38 @@
     "    ### Don't forget to compile the model and print the summary if verbose=True\n",
     "    \"\"\"Fill in your code in the function (~20 lines)\n",
     "    \"\"\"\n",
+    "    model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', input_shape=input_shape, name='conv1'))\n",
+    "    model.add(Conv2D(32, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', name='conv2'))\n",
+    "    model.add(MaxPooling2D((2, 2), name='pool1'))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', name='conv3'))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', name='conv4'))\n",
+    "    model.add(MaxPooling2D((2, 2), name='pool2'))\n",
+    "    model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', name='conv5'))\n",
+    "    model.add(Conv2D(128, (3, 3), activation='relu', kernel_initializer='he_uniform', padding='same', name='conv6'))\n",
+    "    model.add(MaxPooling2D((2, 2), name='pool3'))\n",
+    "    model.add(Flatten(name='flatten'))\n",
+    "    model.add(Dense(128, activation='relu', kernel_initializer='he_uniform', name='dense1'))\n",
+    "    model.add(Dropout(0.25, name='dropout1'))\n",
+    "    model.add(Dense(96, activation='relu', kernel_initializer='he_uniform', name='dense2'))\n",
+    "    model.add(Dropout(0.25, name='dropout2'))\n",
+    "    model.add(Dense(num_outputs, activation='softmax', name='output'))\n",
+    "\n",
+    "    opt = keras.optimizers.Adam(learning_rate=0.002)\n",
+    "\n",
+    "    if verbose:\n",
+    "        model.summary()\n",
+    "    \n",
+    "    model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -692,7 +764,60 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"CIFAR-10--CNN\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv1 (Conv2D)              (None, 32, 32, 32)        896       \n",
+      "                                                                 \n",
+      " conv2 (Conv2D)              (None, 32, 32, 32)        9248      \n",
+      "                                                                 \n",
+      " pool1 (MaxPooling2D)        (None, 16, 16, 32)        0         \n",
+      "                                                                 \n",
+      " conv3 (Conv2D)              (None, 16, 16, 64)        18496     \n",
+      "                                                                 \n",
+      " conv4 (Conv2D)              (None, 16, 16, 64)        36928     \n",
+      "                                                                 \n",
+      " pool2 (MaxPooling2D)        (None, 8, 8, 64)          0         \n",
+      "                                                                 \n",
+      " conv5 (Conv2D)              (None, 8, 8, 128)         73856     \n",
+      "                                                                 \n",
+      " conv6 (Conv2D)              (None, 8, 8, 128)         147584    \n",
+      "                                                                 \n",
+      " pool3 (MaxPooling2D)        (None, 4, 4, 128)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 2048)              0         \n",
+      "                                                                 \n",
+      " dense1 (Dense)              (None, 128)               262272    \n",
+      "                                                                 \n",
+      " dropout1 (Dropout)          (None, 128)               0         \n",
+      "                                                                 \n",
+      " dense2 (Dense)              (None, 96)                12384     \n",
+      "                                                                 \n",
+      " dropout2 (Dropout)          (None, 96)                0         \n",
+      "                                                                 \n",
+      " output (Dense)              (None, 10)                970       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 562634 (2.15 MB)\n",
+      "Trainable params: 562634 (2.15 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "_ = create_compile_cnn(verbose=True)"
    ]
@@ -720,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -734,7 +859,49 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "782/782 [==============================] - 50s 64ms/step - loss: 1.6813 - accuracy: 0.3702 - val_loss: 1.2343 - val_accuracy: 0.5606\n",
+      "Epoch 2/10\n",
+      "782/782 [==============================] - 50s 63ms/step - loss: 1.1863 - accuracy: 0.5785 - val_loss: 1.1455 - val_accuracy: 0.5994\n",
+      "Epoch 3/10\n",
+      "782/782 [==============================] - 51s 65ms/step - loss: 1.0007 - accuracy: 0.6514 - val_loss: 0.9272 - val_accuracy: 0.6774\n",
+      "Epoch 4/10\n",
+      "782/782 [==============================] - 52s 67ms/step - loss: 0.8933 - accuracy: 0.6910 - val_loss: 0.8937 - val_accuracy: 0.6956\n",
+      "Epoch 5/10\n",
+      "782/782 [==============================] - 52s 66ms/step - loss: 0.8120 - accuracy: 0.7217 - val_loss: 0.7750 - val_accuracy: 0.7392\n",
+      "Epoch 6/10\n",
+      "782/782 [==============================] - 49s 63ms/step - loss: 0.7556 - accuracy: 0.7426 - val_loss: 0.8114 - val_accuracy: 0.7314\n",
+      "Epoch 7/10\n",
+      "782/782 [==============================] - 49s 62ms/step - loss: 0.7095 - accuracy: 0.7616 - val_loss: 0.7764 - val_accuracy: 0.7396\n",
+      "Epoch 8/10\n",
+      "782/782 [==============================] - 52s 66ms/step - loss: 0.6715 - accuracy: 0.7737 - val_loss: 0.7978 - val_accuracy: 0.7362\n",
+      "Epoch 9/10\n",
+      "782/782 [==============================] - 51s 65ms/step - loss: 0.6327 - accuracy: 0.7843 - val_loss: 0.7461 - val_accuracy: 0.7510\n",
+      "Epoch 10/10\n",
+      "782/782 [==============================] - 53s 68ms/step - loss: 0.6122 - accuracy: 0.7946 - val_loss: 0.7633 - val_accuracy: 0.7506\n",
+      "INFO:tensorflow:Assets written to: ./cifar10-cnn.tf/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./cifar10-cnn.tf/assets\n"
+     ]
+    }
+   ],
    "source": [
     "cnn_model_fp = './cifar10-cnn.tf'\n",
     "\n",
@@ -751,7 +918,13 @@
     "    \"\"\"Fill in your code here (~3-5 lines)\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    max_epochs = 10\n",
+    "    batch_size = 64\n",
+    "\n",
+    "    hist = model.fit(train_x, train_y, validation_data=(val_x, val_y), epochs=max_epochs, batch_size=batch_size)\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # save the model\n",
     "    model.save(cnn_model_fp)"
@@ -759,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -775,7 +948,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Model] Test accuracy: 74.02%\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Check 1a and 1b completed. \"\"\"\n",
     "\n",
@@ -857,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -885,7 +1073,13 @@
     "    \"\"\"Fill in your code here (~5-10 lines)\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    all_x, all_y = train\n",
+    "    all_x = np.concatenate((all_x, testval[0]), axis=0)\n",
+    "    all_y = np.concatenate((all_y, testval[1]), axis=0)\n",
+    "    \n",
+    "    all_x = np.array([np.pad(x, (0, maxlen - len(x)), 'constant') for x in all_x]) \n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    # split the data into train, test, val\n",
     "    # do the split\n",
@@ -897,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -912,7 +1106,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(15195, 150) (15195,) (1900, 150) (1900,) (1899, 150) (1899,)\n"
+     ]
+    }
+   ],
    "source": [
     "# the size of the vocabulary we'll use\n",
     "vocab_size = 12000\n",
@@ -925,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1021,7 +1223,20 @@
     "    \"\"\"Fill in your code here (~5-10 lines)\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    model.add(keras.layers.Embedding(vocab_size, embedding_size, input_length=maxlen, name='embedding'))\n",
+    "    model.add(keras.layers.GRU(64, return_sequences=True, name='gru1'))\n",
+    "    model.add(keras.layers.GRU(64, name='gru2', dropout=0.20))\n",
+    "    model.add(keras.layers.Dense(num_outputs, activation='sigmoid', name='output'))\n",
+    "\n",
+    "    opt = keras.optimizers.Adam(learning_rate=0.002)\n",
+    "\n",
+    "    if verbose:\n",
+    "        model.summary()\n",
+    "    \n",
+    "    model.compile(optimizer=opt, loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    \n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return model"
    ]
@@ -1075,7 +1290,10 @@
     "\"\"\"Fill in your code here (~1-2 lines)\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "\n",
+    "\n",
+    "\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "hist = model.fit(train_x, train_y, epochs=max_epochs, batch_size=batch_size, validation_data=(val_x, val_y), callbacks=[early_stop_cb])"
    ]
