GRU model for sentiment anlysis of imdb dataset

--- a/HW/hw5/hw5.ipynb
+++ b/HW/hw5/hw5.ipynb
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1258,7 +1258,38 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"imdb-RNN\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding (Embedding)       (None, 150, 196)          2352000   \n",
+      "                                                                 \n",
+      " gru1 (GRU)                  (None, 150, 64)           50304     \n",
+      "                                                                 \n",
+      " gru2 (GRU)                  (None, 64)                24960     \n",
+      "                                                                 \n",
+      " output (Dense)              (None, 1)                 65        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2427329 (9.26 MB)\n",
+      "Trainable params: 2427329 (9.26 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = create_compile_rnn(verbose=True)"
    ]
@@ -1279,7 +1310,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "119/119 [==============================] - 24s 190ms/step - loss: 0.6936 - accuracy: 0.5039 - val_loss: 0.6932 - val_accuracy: 0.5050\n",
+      "Epoch 2/5\n",
+      " 40/119 [=========>....................] - ETA: 16s - loss: 0.6807 - accuracy: 0.5516"
+     ]
+    }
+   ],
    "source": [
     "early_stop_cb = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "\n",
@@ -1290,7 +1332,6 @@
     "\"\"\"Fill in your code here (~1-2 lines)\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "\n",
     "\n",
     "\n",
     "# raise NotImplementedError()\n",
