GRU has 88% accuracy

--- a/HW/hw5/hw5.ipynb
+++ b/HW/hw5/hw5.ipynb
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1318,7 +1318,13 @@
       "Epoch 1/5\n",
       "119/119 [==============================] - 24s 190ms/step - loss: 0.6936 - accuracy: 0.5039 - val_loss: 0.6932 - val_accuracy: 0.5050\n",
       "Epoch 2/5\n",
-      " 40/119 [=========>....................] - ETA: 16s - loss: 0.6807 - accuracy: 0.5516"
+      "119/119 [==============================] - 25s 209ms/step - loss: 0.6216 - accuracy: 0.6553 - val_loss: 0.4363 - val_accuracy: 0.8210\n",
+      "Epoch 3/5\n",
+      "119/119 [==============================] - 25s 208ms/step - loss: 0.3073 - accuracy: 0.8748 - val_loss: 0.2780 - val_accuracy: 0.8868\n",
+      "Epoch 4/5\n",
+      "119/119 [==============================] - 26s 215ms/step - loss: 0.1496 - accuracy: 0.9448 - val_loss: 0.2811 - val_accuracy: 0.8905\n",
+      "Epoch 5/5\n",
+      "119/119 [==============================] - 26s 215ms/step - loss: 0.0711 - accuracy: 0.9778 - val_loss: 0.4051 - val_accuracy: 0.8810\n"
      ]
     }
    ],
@@ -1341,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1357,7 +1363,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Model] Test accuracy: 86.79%\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Check 2b completed. \"\"\"\n",
     "\n",
