multi-head attension has better accuracy

--- a/HW/hw5/hw5.ipynb
+++ b/HW/hw5/hw5.ipynb
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1465,14 +1465,29 @@
     "    \"\"\"Fill in your code here (~10-15 lines). Set the name of your model to be imdb-Attention'\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "\n",
+    "    inputs = keras.Input(shape=input_shape, name='input_layer')\n",
+    "    embedding_layer = keras.layers.Embedding(vocab_size, 32, input_length=150, name='embedding')(inputs)\n",
+    "    attention_output = keras.layers.MultiHeadAttention(num_heads=4, key_dim=64, dropout=0.2, name='attention')(embedding_layer, embedding_layer)\n",
+    "    pooling_layer = keras.layers.GlobalAveragePooling1D(name='global_avg_pool')(attention_output)\n",
+    "    outputs = keras.layers.Dense(num_outputs, activation='sigmoid', name='output')(pooling_layer)\n",
+    "    model = keras.Model(inputs=inputs, outputs=outputs, name='imdb-Attention')\n",
+    "    \n",
+    "    opt = keras.optimizers.Adam(learning_rate=0.002)\n",
+    "\n",
+    "    if verbose:\n",
+    "        model.summary()\n",
+    "    \n",
+    "    model.compile(optimizer=opt, loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1487,14 +1502,49 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"imdb-Attention\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
+      "==================================================================================================\n",
+      " input_layer (InputLayer)    [(None, 150)]                0         []                            \n",
+      "                                                                                                  \n",
+      " embedding (Embedding)       (None, 150, 32)              384000    ['input_layer[0][0]']         \n",
+      "                                                                                                  \n",
+      " attention (MultiHeadAttent  (None, 150, 32)              33568     ['embedding[0][0]',           \n",
+      " ion)                                                                'embedding[0][0]']           \n",
+      "                                                                                                  \n",
+      " global_avg_pool (GlobalAve  (None, 32)                   0         ['attention[0][0]']           \n",
+      " ragePooling1D)                                                                                   \n",
+      "                                                                                                  \n",
+      " output (Dense)              (None, 1)                    33        ['global_avg_pool[0][0]']     \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 417601 (1.59 MB)\n",
+      "Trainable params: 417601 (1.59 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model = create_compile_attention(verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1508,7 +1558,23 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "238/238 [==============================] - 20s 81ms/step - loss: 0.3808 - accuracy: 0.8091 - val_loss: 0.2684 - val_accuracy: 0.8947\n",
+      "Epoch 2/5\n",
+      "238/238 [==============================] - 19s 80ms/step - loss: 0.1734 - accuracy: 0.9324 - val_loss: 0.2875 - val_accuracy: 0.8799\n",
+      "Epoch 3/5\n",
+      "238/238 [==============================] - 19s 80ms/step - loss: 0.1111 - accuracy: 0.9590 - val_loss: 0.3778 - val_accuracy: 0.8820\n",
+      "Epoch 4/5\n",
+      "238/238 [==============================] - 19s 80ms/step - loss: 0.0738 - accuracy: 0.9725 - val_loss: 0.4769 - val_accuracy: 0.8689\n",
+      "Total training time 77.0 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "early_stop_cb = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
     "\n",
@@ -1519,7 +1585,7 @@
     "\"\"\"Fill in your code here (~1-2 lines)\n",
     "\"\"\"\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "st = time.time()\n",
     "\n",
@@ -1532,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1548,7 +1614,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Model] Test accuracy: 90.16% [score: 21.59]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\" [ASSERTS] Check 3 completed. \"\"\"\n",
     "\n",
@@ -1593,10 +1667,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# The test accuracy was 90.16% and it's better than RNN even with small amount of parameters, and smalle embedding diamensions."
+   ]
   },
   {
    "cell_type": "markdown",
