--- a/HW/hw5/hw5.ipynb
+++ b/HW/hw5/hw5.ipynb
@@ -2518,9 +2518,11 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: Yes it somewhat resembles the MNIST fashion data, but not exactly sharp and clear as the original images. This may be the fact that we are sampling from a normal distribution with mean 0 and a standard deviation of 1. If the actual distribution of latent space representations for Fashion-MNIST data is different, the generated images may not be representative of the true data distribution.\n",
+    "## Answer: Yes it somewhat resembles the MNIST fashion data, but not as sharp and clear as the original images. \n",
+    "# First this is not a variational auto-encoder, so it does not learn the probabilistic distribution of the data. Therefore it's not good as a generative ML model. \n",
+    "# Furthermore, since we are sampling from a normal distribution with a mean of 0 and a standard deviation of 1. If the actual distribution of latent space representations for Fashion-MNIST data is different, the generated images may not be representative of the true data distribution.\n",
     "#\n",
-    "# Another reason is that the encoder is overfit to training data, therfore when the decoder use that latent space for creating new and unseen images, it may not be able to generate the images as good as the original images due to overfitting.\n",
+    "# Another reason may be that the encoder is overfitting to training data, therefore when the decoder uses that latent space for creating new and unseen images, it may not be able to generate the images as good as the original images due to overfitting.\n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
@@ -2788,7 +2790,7 @@
    "source": [
     "\"\"\" Remove the 'raise NotImplementedError' line(s). Write your answer as a comment in the place provided.  (Do not change the cell type from code to markdown.)\"\"\"\n",
     "# \n",
-    "## Answer: Yes, it's better. The using of droput generalizae the learning of the latent space (reduce overfitting) so that it can produce better latent space that can generate data that resembles orginal data.\n",
+    "## Answer: Yes, it's better. The using of a dropout layer generalizes the learning of the latent space (reduce overfitting) so that it can produce more generalized latent space that can generate data that resembles the original data.\n",
     "#\n",
     "# YOUR CODE HERE\n",
     "# raise NotImplementedError()"
