--- a/Diabetis_DNN/train_dnn.ipynb
+++ b/Diabetis_DNN/train_dnn.ipynb
@@ -220,6 +220,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_data = pd.read_csv('../input/diabetes-health-indicators-dataset/diabetes_binary_health_indicators_BRFSS2015.csv')\n",
+    "print(diabetes_data.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "deletable": false,
@@ -247,12 +266,8 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\"\"\"\n",
-    "## Load and preprocess the Fashion-MNIST dataset\n",
-    "\"\"\"\n",
-    "def load_preprocess_fmnist_data(flatten=True, onehot=True, val_prop=0.5, seed=None, verbose=False):\n",
-    "    \n",
-    "    (x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
+    "\n",
+    "def preprocess_data(data, flatten=True, onehot=True, val_prop=0.5, seed=None, verbose=False):\n",
     "    \n",
     "    assert x_train.shape == (60000, 28, 28) and x_test.shape == (10000, 28, 28)\n",
     "    assert y_train.shape == (60000,) and y_test.shape == (10000,)\n",
