--- a/Diabetis_DNN/train_dnn.ipynb
+++ b/Diabetis_DNN/train_dnn.ipynb
@@ -2,13 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -175,30 +168,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "d746a78509c270bb1f51eff6a455a1f6",
-     "grade": true,
-     "grade_id": "seed_checking",
-     "locked": true,
-     "points": 0,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" [ASSERTS] Check seed. \"\"\"\n",
-    "assert seed == 42"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
@@ -220,46 +189,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(253680, 22)\n"
+     ]
+    }
+   ],
    "source": [
-    "diabetes_data = pd.read_csv('../input/diabetes-health-indicators-dataset/diabetes_binary_health_indicators_BRFSS2015.csv')\n",
-    "print(diabetes_data.shape)\n"
+    "diabetes_data = pd.read_csv('diabetes_012_health_indicators_BRFSS2015.csv')\n",
+    "print(diabetes_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Diabetes_012</th>\n",
+       "      <th>HighBP</th>\n",
+       "      <th>HighChol</th>\n",
+       "      <th>CholCheck</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>Smoker</th>\n",
+       "      <th>Stroke</th>\n",
+       "      <th>HeartDiseaseorAttack</th>\n",
+       "      <th>PhysActivity</th>\n",
+       "      <th>Fruits</th>\n",
+       "      <th>...</th>\n",
+       "      <th>AnyHealthcare</th>\n",
+       "      <th>NoDocbcCost</th>\n",
+       "      <th>GenHlth</th>\n",
+       "      <th>MentHlth</th>\n",
+       "      <th>PhysHlth</th>\n",
+       "      <th>DiffWalk</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Diabetes_012  HighBP  HighChol  CholCheck   BMI  Smoker  Stroke  \\\n",
+       "0           0.0     1.0       1.0        1.0  40.0     1.0     0.0   \n",
+       "1           0.0     0.0       0.0        0.0  25.0     1.0     0.0   \n",
+       "2           0.0     1.0       1.0        1.0  28.0     0.0     0.0   \n",
+       "3           0.0     1.0       0.0        1.0  27.0     0.0     0.0   \n",
+       "4           0.0     1.0       1.0        1.0  24.0     0.0     0.0   \n",
+       "\n",
+       "   HeartDiseaseorAttack  PhysActivity  Fruits  ...  AnyHealthcare  \\\n",
+       "0                   0.0           0.0     0.0  ...            1.0   \n",
+       "1                   0.0           1.0     0.0  ...            0.0   \n",
+       "2                   0.0           0.0     1.0  ...            1.0   \n",
+       "3                   0.0           1.0     1.0  ...            1.0   \n",
+       "4                   0.0           1.0     1.0  ...            1.0   \n",
+       "\n",
+       "   NoDocbcCost  GenHlth  MentHlth  PhysHlth  DiffWalk  Sex   Age  Education  \\\n",
+       "0          0.0      5.0      18.0      15.0       1.0  0.0   9.0        4.0   \n",
+       "1          1.0      3.0       0.0       0.0       0.0  0.0   7.0        6.0   \n",
+       "2          1.0      5.0      30.0      30.0       1.0  0.0   9.0        4.0   \n",
+       "3          0.0      2.0       0.0       0.0       0.0  0.0  11.0        3.0   \n",
+       "4          0.0      2.0       3.0       0.0       0.0  0.0  11.0        5.0   \n",
+       "\n",
+       "   Income  \n",
+       "0     3.0  \n",
+       "1     1.0  \n",
+       "2     8.0  \n",
+       "3     6.0  \n",
+       "4     4.0  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "diabetes_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3c18bee960da611150f8280e8f7d37ad",
-     "grade": false,
-     "grade_id": "task1-loaddata",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60000, 784) (60000, 10) (5000, 784) (5000, 10) (5000, 784) (5000, 10)\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   Diabetes_012          253680 non-null  float64\n",
+      " 1   HighBP                253680 non-null  float64\n",
+      " 2   HighChol              253680 non-null  float64\n",
+      " 3   CholCheck             253680 non-null  float64\n",
+      " 4   BMI                   253680 non-null  float64\n",
+      " 5   Smoker                253680 non-null  float64\n",
+      " 6   Stroke                253680 non-null  float64\n",
+      " 7   HeartDiseaseorAttack  253680 non-null  float64\n",
+      " 8   PhysActivity          253680 non-null  float64\n",
+      " 9   Fruits                253680 non-null  float64\n",
+      " 10  Veggies               253680 non-null  float64\n",
+      " 11  HvyAlcoholConsump     253680 non-null  float64\n",
+      " 12  AnyHealthcare         253680 non-null  float64\n",
+      " 13  NoDocbcCost           253680 non-null  float64\n",
+      " 14  GenHlth               253680 non-null  float64\n",
+      " 15  MentHlth              253680 non-null  float64\n",
+      " 16  PhysHlth              253680 non-null  float64\n",
+      " 17  DiffWalk              253680 non-null  float64\n",
+      " 18  Sex                   253680 non-null  float64\n",
+      " 19  Age                   253680 non-null  float64\n",
+      " 20  Education             253680 non-null  float64\n",
+      " 21  Income                253680 non-null  float64\n",
+      "dtypes: float64(22)\n",
+      "memory usage: 42.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "diabetes_data.info(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data; shape: (228312, 21) [y: (228312, 3)], val shape: (12684, 21) [y: (12684, 21)], test shape: (12684, 21) [y: (12684, 3)]\n"
      ]
     }
    ],
@@ -267,45 +483,31 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "\n",
-    "def preprocess_data(data, flatten=True, onehot=True, val_prop=0.5, seed=None, verbose=False):\n",
-    "    \n",
-    "    assert x_train.shape == (60000, 28, 28) and x_test.shape == (10000, 28, 28)\n",
-    "    assert y_train.shape == (60000,) and y_test.shape == (10000,)\n",
+    "def preprocess_data(data, onehot=True, test_val_prop=0.1, val_prop=0.5, seed=None, verbose=False):\n",
     "\n",
-    "    if verbose: \n",
-    "        print('Loaded Fashion-MNIST data; shape: {} [y: {}], test shape: {} [y: {}]'.format(x_train.shape, y_train.shape,\n",
-    "                                                                                      x_test.shape, y_test.shape))\n",
+    "    # Split the data into features and labels\n",
+    "    x_all = data.drop('Diabetes_012', axis=1)\n",
+    "    y_all = data['Diabetes_012']\n",
+    "\n",
     "    \n",
-    "    if flatten: # Let's flatten the images for easier processing (labels don't change)\n",
-    "        flat_vec_size = 28*28\n",
-    "        x_train = x_train.reshape(x_train.shape[0], flat_vec_size)\n",
-    "        x_test = x_test.reshape(x_test.shape[0], flat_vec_size)\n",
     "\n",
     "    if onehot: # Put the labels in \"one-hot\" encoding using keras' to_categorical()\n",
-    "        num_classes = 10\n",
-    "        y_train = keras.utils.to_categorical(y_train, num_classes)\n",
-    "        y_test = keras.utils.to_categorical(y_test, num_classes)\n",
+    "        num_classes = 3\n",
+    "        y_all = keras.utils.to_categorical(y_all, num_classes)\n",
     "\n",
-    "    train_x = x_train\n",
-    "    train_y = y_train\n",
     "\n",
-    "    # we'll split the test set into test and val\n",
-    "    testval_x = x_test\n",
-    "    testval_y = y_test\n",
+    "    train_x, temp_x, train_y, temp_y = train_test_split(x_all, y_all, test_size=test_val_prop, random_state=seed)\n",
+    "  \n",
+    "    val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, test_size=val_prop, random_state=seed)\n",
     "\n",
-    "    # do the split\n",
-    "    val_x, test_x, val_y, test_y = train_test_split(testval_x, testval_y, test_size=val_prop, random_state=seed)\n",
+    "    if verbose: \n",
+    "        print('Train data; shape: {} [y: {}], val shape: {} [y: {}], test shape: {} [y: {}]'.format(train_x.shape, train_y.shape,\n",
+    "                                                                                      val_x.shape, val_x.shape, test_x.shape, test_y.shape))\n",
     "    \n",
     "    return train_x, train_y, test_x, test_y, val_x, val_y\n",
     "\n",
     "\n",
-    "# grab the data\n",
-    "train_x, train_y, test_x, test_y, val_x, val_y = load_preprocess_fmnist_data(flatten=True, onehot=True, val_prop=0.5, seed=seed) \n",
-    "\n",
-    "# sanity check shapes\n",
-    "print(train_x.shape, train_y.shape, test_x.shape, test_y.shape, val_x.shape, val_y.shape)\n",
-    "\n",
-    "assert train_x.shape == (60000, 784) and train_y.shape == (60000,10) and test_x.shape == (5000, 784) and test_y.shape == (5000,10)"
+    "train_x, train_y, test_x, test_y, val_x, val_y = preprocess_data(diabetes_data, onehot=True, seed=seed, verbose=True) "
    ]
   },
   {
