--- a/Diabetis_DNN/train_dnn.ipynb
+++ b/Diabetis_DNN/train_dnn.ipynb
@@ -468,19 +468,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train data; shape: (228312, 21) [y: (228312, 3)], val shape: (12684, 21) [y: (12684, 21)], test shape: (12684, 21) [y: (12684, 3)]\n"
+      "Shape : train x: (228312, 21) y: (228312, 3), val x: (12684, 21) y: (12684, 21), test shape: (12684, 21) y: (12684, 3)\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "\n",
     "def preprocess_data(data, onehot=True, test_val_prop=0.1, val_prop=0.5, seed=None, verbose=False):\n",
@@ -489,18 +490,22 @@
     "    x_all = data.drop('Diabetes_012', axis=1)\n",
     "    y_all = data['Diabetes_012']\n",
     "\n",
-    "\n",
     "    if onehot:\n",
     "        num_classes = 3\n",
     "        y_all = keras.utils.to_categorical(y_all, num_classes)\n",
     "\n",
-    "\n",
+    "    # Split the data into training, validation, and test sets\n",
     "    train_x, temp_x, train_y, temp_y = train_test_split(x_all, y_all, test_size=test_val_prop, random_state=seed)\n",
-    "  \n",
     "    val_x, test_x, val_y, test_y = train_test_split(temp_x, temp_y, test_size=val_prop, random_state=seed)\n",
     "\n",
+    "    # Standardize the data\n",
+    "    scaler = StandardScaler()\n",
+    "    train_x = scaler.fit_transform(train_x)\n",
+    "    val_x = scaler.transform(val_x)\n",
+    "    test_x = scaler.transform(test_x)\n",
+    "\n",
     "    if verbose: \n",
-    "        print('Train data; shape: {} [y: {}], val shape: {} [y: {}], test shape: {} [y: {}]'.format(train_x.shape, train_y.shape,\n",
+    "        print('Shape : train x: {} y: {}, val x: {} y: {}, test shape: {} y: {}'.format(train_x.shape, train_y.shape,\n",
     "                                                                                      val_x.shape, val_x.shape, test_x.shape, test_y.shape))\n",
     "    \n",
     "    return train_x, train_y, test_x, test_y, val_x, val_y\n",
