update of using common utility functions

--- a/Diabetis_DNN/neural_network.ipynb
+++ b/Diabetis_DNN/neural_network.ipynb
@@ -43,37 +43,27 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "code",
-     "checksum": "8a657110ad49635ac5f45bf6851cc7c0",
-     "grade": false,
-     "grade_id": "task1-code",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/z6/5n_s73l16t753clskkrk3n180000gq/T/ipykernel_82150/1886382061.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
       "/Users/hansika/Documents/MLE/env/mle/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
       "  warnings.warn(\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# import common utility functions\n",
+    "from common import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -89,67 +79,33 @@
     }
    ],
    "source": [
-    "# Load packages we need\n",
-    "import sys\n",
-    "import os\n",
-    "import time\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import sklearn\n",
-    "import seaborn as sns\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "import tensorflow.keras as keras\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "plt.rcParams.update({'font.size': 14})\n",
-    "\n",
-    "# Load the TensorBoard notebook extension\n",
-    "#%load_ext tensorboard\n",
-    "\n",
-    "\n",
     "# Let's check our software versions\n",
     "print('------------')\n",
     "print('### Python version: ' + __import__('sys').version)\n",
     "print('### NumPy version: ' + np.__version__)\n",
     "print('### Scikit-learn version: ' + sklearn.__version__)\n",
     "print('### Tensorflow version: ' + tf.__version__)\n",
-    "print('------------')\n",
-    "\n",
-    "def var_exists(var_name):\n",
-    "    return (var_name in globals() or var_name in locals())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": false,
-    "editable": false,
-    "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "5cc6d3b909b447a027649ca1d83883d9",
-     "grade": false,
-     "grade_id": "seed_instruct",
-     "locked": true,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "source": [
-    "#### This is the seed we will use, do not change it."
+    "print('------------')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seed set to 26\n"
+     ]
+    }
+   ],
    "source": [
     "# set the seed\n",
     "seed = 26\n",
-    "np.random.seed(seed)\n",
+    "\n",
+    "set_seed(seed)\n",
     "\n",
     "epsf = 1e-9 # small epsilon value for floating point comparisons"
    ]
@@ -176,25 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(253680, 22)\n"
+      "Data loaded successfully data shape: (253680, 22)\n"
      ]
     }
    ],
    "source": [
-    "diabetes_data = pd.read_csv('diabetes_012_health_indicators_BRFSS2015.csv')\n",
-    "print(diabetes_data.shape)"
+    "diabetes_data = load_data('diabetes_012_health_indicators_BRFSS2015.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +354,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
